column wrap fix

--- a/src/activeTable/skin/we/table.css
+++ b/src/activeTable/skin/we/table.css
@@ -278,6 +278,7 @@
 .active-table.has-hscroll .data-table th,
 .active-table.has-vscroll .data-table th{
 	display: inline-block;
+	white-space: normal;
 }
 
 .active-table.has-hscroll .data-table tfoot td,
